--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.12.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
